# deeplearning_furnari

./: index.html
colabs/pytorch-lightning/: Optimize_Pytorch_Lightning_models_with_Weights_&_Biases.ipynb
notebooks/: 07-04-26-knowledge-distillation.ipynb  09-04-26-deep-domain-adaptation.ipynb  24-03-26-deep-metric-learning.ipynb  pyproject.toml
