[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lightning",
    "wandb",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
